--- a/app/src/main/res/layout/x_recycler_view_header.xml
+++ b/app/src/main/res/layout/x_recycler_view_header.xml
@@ -3,69 +3,74 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imgArrow"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/ic_arrow_bottom"
-            app:layout_constraintBottom_toBottomOf="@+id/customLoading"
-            app:layout_constraintEnd_toEndOf="@+id/customLoading"
-            app:layout_constraintStart_toStartOf="@+id/customLoading"
-            app:layout_constraintTop_toTopOf="@+id/customLoading" />
-
-        <com.side.project.customrecyclerview.customView.XRecyclerViewLoading
-            android:id="@+id/customLoading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:chainUseRtl="true"
-            app:layout_constraintBottom_toBottomOf="@+id/group"
-            app:layout_constraintEnd_toStartOf="@+id/group"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/group" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/group"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/customLoading"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvState"
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imgArrow"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@drawable/ic_arrow_bottom"
+                app:layout_constraintBottom_toBottomOf="@+id/pb"
+                app:layout_constraintEnd_toEndOf="@+id/pb"
+                app:layout_constraintStart_toStartOf="@+id/pb"
+                app:layout_constraintTop_toTopOf="@+id/pb" />
+
+            <ProgressBar
+                android:id="@+id/pb"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintHorizontal_bias=".8"
+                app:layout_constraintBottom_toBottomOf="@+id/group"
+                app:layout_constraintEnd_toStartOf="@+id/group"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/group"/>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="放開更新" />
+                app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvStateTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:gravity="center"
-                app:layout_constraintEnd_toEndOf="@+id/tvState"
-                app:layout_constraintStart_toStartOf="@+id/tvState"
-                app:layout_constraintTop_toBottomOf="@+id/tvState"
-                tools:text="上次更新時間：2023/02/07" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvState"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="放開更新" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvStateTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toEndOf="@+id/tvState"
+                    app:layout_constraintStart_toStartOf="@+id/tvState"
+                    app:layout_constraintTop_toBottomOf="@+id/tvState"
+                    tools:text="上次更新時間：2023/02/07" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
